# notes-agent

./: .gitignore  CLAUDE.md  README.md  check_syntax.py  config.py  handlers.py  pyproject.toml  run_server.sh  server.py  storage.py  tool_handlers.py
